# distATP

./: .env.example  README.md  docker-compose.yml  start.sh
.github/workflows/: build-exe.yml
atp_client/: README.md  __init__.py  __main__.py  atp_client.py  pyproject.toml
atp_client/src/finance_atp_client/: __main__.py
atp_client/src/finance_atp_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
