[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-atp-client"
version = "1.0.0"
description = "FinanceATP API Client - ATP通貨管理APIのGUIクライアント"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FinanceATP Team"}
]
keywords = ["finance", "atp", "api", "client"]

dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
atp-client = "finance_atp_client:main"

[project.gui-scripts]
atp-client-gui = "finance_atp_client:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md"]
